refactor: update API endpoint paths by removing redundant '/api' prefix